introduce doc for create user and product
