# internal/handler/user_handler.go
@@ -25,6 +25,16 @@ func NewUserHandler(userDB repo.UserInterface) *UserHandler {
 	}
 }
 
+// Create user godoc
+// @Summary Create user
+// @Description Create user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param request body dto.CreateUserRequest true "user request"
+// @Success 201
+// @Failure 500 {object} Error
+// @Router /users [post]
 func (h *UserHandler) Create(w http.ResponseWriter, r *http.Request) {
 	var user dto.CreateUserRequest
 	err := json.NewDecoder(r.Body).Decode(&user)
